Doc: Make note of using bsrange with ':'
Which is also a supported form of delimiter.

Signed-off-by: Avri Altman <avri.altman@wdc.com>

--- a/fio.1
+++ b/fio.1
@@ -1434,7 +1434,7 @@ described in \fBblocksize\fR. Example:
 .RS
 .RS
 .P
-bsrange=1k\-4k,2k\-8k
+bsrange=1k\-4k,2k\-8k or bsrange=1k:4k,2k:8k
 .RE
 .RE
 .TP
